Task5/sandbox.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
---
apiVersion: v1
kind: Pod
metadata:
  name: front-end-app
  namespace: sandbox
  labels:
    role: front-end
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: back-end-api-app
  namespace: sandbox
  labels:
    role: back-end-api
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: admin-front-end-app
  namespace: sandbox
  labels:
    role: admin-front-end
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: admin-back-end-api-app
  namespace: sandbox
  labels:
    role: admin-back-end-api
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
